# al_planner

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/al_planner/: MainActivity.kt
installer/macos_dmg/: config.json  icon.icns
integration_test/: simple_test.dart
lib/: main.dart
lib/screens/: home_screen.dart  path_drawer.dart  pathing_screen.dart  project_dialog.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/utils/: bezier.dart  double.dart  point.dart  robot.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner/: Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_al_planner.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_al_planner.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
